# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hicollie/hicollie.gni")
import("//build/ohos.gni")

ohos_shared_library("libthread_sampler") {
  sources = [
    "thread_sampler.cpp",
    "thread_sampler_api.cpp",
    "thread_sampler_utils.cpp",
  ]
  include_dirs = [ "${hicollie_libthread_sampler}/include" ]

  external_deps = [
    "c_utils:utils",
    "faultloggerd:libstack_printer",
    "faultloggerd:libunwinder",
    "hilog:libhilog",
  ]

  defines = []

  innerapi_tags = [
    "chipsetsdk_sp_indirect",
    "platformsdk_indirect",
  ]

  part_name = "hicollie"
  subsystem_name = "hiviewdfx"
  version_script = "libthread_sampler.map"
}
