# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//base/hiviewdfx/hicollie/hicollie.gni")

module_output_path = "hicollie/hicollie"
hicollie_part_path = "//base/hiviewdfx/hicollie"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    ".",
    "${hicollie_part_path}/frameworks/app/include",
    "${hicollie_part_path}/interfaces/app/include",
  ]
}

##############################unittest##########################################
ohos_unittest("AppWatchdogInnerTest") {
  module_out_path = module_output_path
  sources = [ "app_watchdog_inner_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//base/hiviewdfx/hicollie/frameworks/app:libapp_hicollie_source" ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  defines = []
}

ohos_unittest("AppWatchdogTest") {
  module_out_path = module_output_path
  sources = [ "app_watchdog_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//base/hiviewdfx/hicollie/frameworks/app:libapp_hicollie_source" ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  defines = []
}

ohos_unittest("AppWatchdogUtilsTest") {
  module_out_path = module_output_path
  sources = [ "app_watchdog_utils_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//base/hiviewdfx/hicollie/frameworks/app:libapp_hicollie_source" ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  defines = []
}

###############################################################################
group("unittest") {
  testonly = true
  deps = [
    # deps file
    ":AppWatchdogInnerTest",
    ":AppWatchdogTest",
    ":AppWatchdogUtilsTest"
  ]
}
###############################################################################
