# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hiviewdfx/hicollie"
hicollie_part_path = "//base/hiviewdfx/hicollie"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    ".",
    "${hicollie_part_path}/frameworks/native/test",
    "${hicollie_part_path}/interfaces/native/innerkits/include/xcollie",
    "//commonlibrary/c_utils/base/include",
  ]
}

##############################unittest##########################################
ohos_unittest("XCollieUnitTest") {
  module_out_path = module_output_path
  sources = [
    "${hicollie_part_path}/frameworks/native/test/xcollie_checker_test.cpp",
    "xcollie_interface_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]
  external_deps = [
    "c_utils:utils",
    "hicollie_native:libhicollie",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
  ]
}

ohos_unittest("WatchdogUnitTest") {
  module_out_path = module_output_path
  sources = [ "watchdog_interface_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]
  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
  ]
}

ohos_unittest("HandlerCheckerTest") {
  module_out_path = module_output_path
  include_dirs = [
    ".",
    "${hicollie_part_path}/frameworks/native/",
    "//commonlibrary/c_utils/base/include",
  ]
  sources = [ "handler_checker_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${hicollie_part_path}/frameworks/native:libhicollie_source",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hilog_native:libhilog",
  ]
}

ohos_unittest("XCollieCheckerInterfaceUnitTest") {
  module_out_path = module_output_path
  sources = [
    "${hicollie_part_path}/frameworks/native/test/xcollie_checker_test.cpp",
    "xcollie_checker_interface_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]
  external_deps = [
    "c_utils:utils",
    "hicollie_native:libhicollie",
    "hilog_native:libhilog",
  ]
}

ohos_unittest("XCollieInnerTestUnitTest") {
  module_out_path = module_output_path
  include_dirs = [
    ".",
    "${hicollie_part_path}/frameworks/native/",
    "//commonlibrary/c_utils/base/include",
  ]
  sources = [
    "${hicollie_part_path}/frameworks/native/test/xcollie_checker_test.cpp",
    "xcollie_inner_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${hicollie_part_path}/frameworks/native:libhicollie_source",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "c_utils:utils",
    "hicollie_native:libhicollie",
    "hilog_native:libhilog",
  ]
}

###############################################################################
group("unittest") {
  testonly = true
  deps = [
    # deps file
    ":HandlerCheckerTest",
    ":WatchdogUnitTest",
    ":XCollieCheckerInterfaceUnitTest",
    ":XCollieInnerTestUnitTest",
    ":XCollieUnitTest",
  ]
}
###############################################################################
